--- a/notebooks/breast_cancer_tumor_classification.ipynb
+++ b/notebooks/breast_cancer_tumor_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNxDZuWeHPu/80RDU85roFF",
+      "authorship_tag": "ABX9TyOxBROOFaXLNHFjGNjlxhnk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -952,7 +952,7 @@
         "train_data_features_transformed_scaled_df = pd.DataFrame(train_data_features_transformed_standarized, columns=feature_names) # covert to dataFrame\n",
         "\n",
         "\n",
-        "# transform train data\n",
+        "# transform test data\n",
         "test_data_features_transformed_standarized = std_scaler.transform (test_data_features_transformed)\n",
         "test_data_features_transformed_scaled_df = pd.DataFrame(test_data_features_transformed_standarized, columns=feature_names) # covert to dataFrame\n",
         "\n",
@@ -985,7 +985,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Look at Correlation between Features in Test Data\n",
+        "# Look at correlations between features in test data\n",
         "corr_matrix = train_data_features_transformed_scaled_df.corr()\n",
         "sns.heatmap(corr_matrix, annot=False, cmap='coolwarm', vmax=1, vmin=-1)\n",
         "plt.title('Correlation Matrix')\n",
@@ -1296,6 +1296,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Model Validation"
+      ],
+      "metadata": {
+        "id": "hj6vrItJN84R"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "\n",
         "\n",
         "---\n",
@@ -1521,6 +1530,22 @@
     {
       "cell_type": "markdown",
       "source": [
+        "\n",
+        "# Performace Comparison"
+      ],
+      "metadata": {
+        "id": "7Y6CIrH3OIsE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "# This is formatted as code\n",
+        "```\n",
+        "\n",
         "\n",
         "\n",
         "---\n",
